package activeobject.impl;

import activeobject.Observer;
import activeobject.Subject;

public class Afficheur implements Observer {

    public Afficheur(String afficheur1_, Canal canal1) {
    }

    @Override
    public void update(Subject s) {

    }
}