package activeobject.impl;

import activeobject.Capteur;

public class CapteurImpl implements Capteur {

    public CapteurImpl(String capteur_a, StrategyDiffusion atomique) {

    }

    @Override
    public Integer getValue() {
        return null;
    }

    public void tick() {

    }
}
